...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/exo_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:resize_mode="fixed_width">

            </com.google.android.exoplayer2.ui.PlayerView>

...
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_step_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
...
