<?xml version="1.0" encoding="utf-8"?>

<androidx.recyclerview.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rv_recipe_fragment"
    android:name="com.tye.bakingapp.RecipeFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context=".Fragments.RecipeFragment"
    tools:listitem="@layout/item_fragment_recipe_step">
</androidx.recyclerview.widget.RecyclerView>
